--- a/projects/index.html
+++ b/projects/index.html
@@ -3,6 +3,7 @@ layout: default
 current: home
 class: 'home-template'
 navigation: True
+permalink: https://raulcoroban.github.io/Doxio/
 ---
 
 <!-- < default -->
@@ -14,7 +15,7 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                {{ site.title }}
+                Doxio's Projects
             </h1>
         </div>
         {% include site-nav.html %}
