--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 current: home
 class: 'home-template'
 navigation: True
-permalink: permalink: https://raulcoroban.github.io/Doxio/projects.html
+permalink: permalink: projects.html
 ---
 
 <!-- < default -->
