--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@ layout: default
 current: home
 class: 'home-template'
 navigation: True
-permalink: permalink: projects.html
+permalink: https://raulcoroban.github.io/Doxio/projects/
 ---
 
 <!-- < default -->
