--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-current: default
+current: home
 class: 'home-template'
 navigation: True
 permalink: https://raulcoroban.github.io/Doxio/projects/
