--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,6 @@ layout: default
 current: home
 class: 'home-template'
 navigation: True
-permalink: https://raulcoroban.github.io/Doxio/projects/
 ---
 
 <!-- < default -->
@@ -15,7 +14,11 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                Projects
+                {% if site.logo %}
+                    <img class="site-logo" src="{{ site.baseurl }}{{ site.logo }}" alt="{{ site.title }}"/>
+                {% else %}
+                    {{ site.title }}
+                {% endif %}
             </h1>
             <h2 class="site-description">{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}</h2>
         </div>
