--- a/projects/index.html
+++ b/projects/index.html
@@ -13,14 +13,7 @@ into the {body} of the default.hbs template -->
 <header class="site-header outer {% if page.cover or site.cover %}">
     <div class="inner">
         <div class="site-header-content">
-            <h1 class="site-title">
-                {% if site.logo %}
-                    <img class="site-logo" src="{{ site.baseurl }}{{ site.logo }}" alt="{{ site.title }}"/>
-                {% else %}
-                    {{ site.title }}
-                {% endif %}
-            </h1>
-            <h2 class="site-description">{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}</h2>
+            <h1 class="site-description">Projects</h1>
         </div>
         {% include site-nav.html %}
     </div>
