--- a/projects/index.html
+++ b/projects/index.html
@@ -14,9 +14,9 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                {{ site.title }}
+                Projects
             </h1>
-            <h2 class="site-description">{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}</h2>
+            <h2 class="site-description">{Personal UX/UI crafts</h2>
         </div>
         {% include site-nav.html %}
     </div>
