--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@ into the {body} of the default.hbs template -->
             <h1 class="site-title">
                 Projects
             </h1>
-            <h2 class="site-description">{Personal UX/UI crafts</h2>
+            <h2 class="site-description">Personal UX/UI crafts</h2>
         </div>
         {% include site-nav.html %}
     </div>
