--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                Projects
+                {{site.categories}}
             </h1>
             <h2 class="site-description">Personal UX/UI crafts</h2>
         </div>
