--- a/_posts/2017-07-27-advanced-markdown 00.04.32.html
+++ b/_posts/2017-07-27-advanced-markdown 00.04.32.html
@@ -31,7 +31,8 @@ author: ghost
 <p>If you want to get really fancy, you can even add syntax highlighting using <a href="http://prismjs.com/">Prism.js</a>.</p>
 <h2 id="fullbleedimages">Full bleed images</h2>
 <p>One neat trick which you can use in Markdown to distinguish between different types of images is to add a <code>#hash</code> value to the end of the source URL, and then target images containing the hash with special styling. For example:</p>
-<p><img src="https://github.com/RaulCoroban/Doxio/blob/master/assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
+<p><img src="https://github.com/RaulCoroban/Doxio/assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
+<p><img src="assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
 <p>which is styled with...</p>
 <pre><code>img[src$=&quot;#full&quot;] {
     max-width: 100vw;
