--- a/_posts/2017-07-27-advanced-markdown 00.04.32.html
+++ b/_posts/2017-07-27-advanced-markdown 00.04.32.html
@@ -4,7 +4,7 @@ current: post
 cover: assets/images/iptcover.jpg
 navigation: True
 title: Informática Para Tod@s
-date: 2016-07-01 10:18:00
+date: 2018-08-23 10:18:00
 tags:
 class: post-template
 subclass: 'post'
@@ -12,46 +12,13 @@ author: doxio
 ---
 
 
-<p>There are lots of powerful things you can do with the Ghost editor</p>
-<p>If you've gotten pretty comfortable with <a href="/the-editor/">all the basics</a> of writing in Ghost, then you may enjoy some more advanced tips about the types of things you can do with Markdown!</p>
-<p>As with the last post about the editor, you'll want to be actually editing this post as you read it so that you can see all the Markdown code we're using.</p>
-<h2 id="specialformatting">Special formatting</h2>
-<p>As well as bold and italics, you can also use some other special formatting in Markdown when the need arises, for example:</p>
-<ul>
-<li><s>strike through</s></li>
-<li><mark>highlight</mark></li>
-<li>*escaped characters*</li>
-</ul>
-<h2 id="writingcodeblocks">Writing code blocks</h2>
-<p>There are two types of code elements which can be inserted in Markdown, the first is inline, and the other is block. Inline code is formatted by wrapping any word or words in back-ticks, <code>like this</code>. Larger snippets of code can be displayed across multiple lines using triple back ticks:</p>
-<pre><code>.my-link {
-    text-decoration: underline;
-}
-</code></pre>
-<p>If you want to get really fancy, you can even add syntax highlighting using <a href="http://prismjs.com/">Prism.js</a>.</p>
-<h2 id="fullbleedimages">Full bleed images</h2>
-<p>One neat trick which you can use in Markdown to distinguish between different types of images is to add a <code>#hash</code> value to the end of the source URL, and then target images containing the hash with special styling. For example:</p>
+<p><a href="https://women.acm.org">ACM-W</a> is an international comitee part of the <a href="http://acm.org/">ACM (Association for Computer Machinery)</a> whose main mission is to promote women participation in all the fields related to Computer Science.</p>
+<p>&quot;ACM-W: Informática para tod@s&quot; joined a family of thriving events aimed to make visible women figures in Computer Science in a cozy environment where sharing ideas and showing values are the special guests.</p> As its name denotes, this is a local spanish event derived from the <a href="https://womencourage.acm.org/2018/">WomEncourage</a> ACM-W event, and starting out it journey on 2016's summer.
+
+<p>As part of the local ACM UPV Student Chapter of Valencia, and assuming the role of designer and starting from the first edition, I created all the graphics of the event, from posters and brochures to custom slides, establishing the brand of the celebration from the beginning. </p>
+
+<h2 id="valenciaipt">Valencia - 1st July 2016</h2>
+<p>The valencian city was the first one to hold this kind of <a href="https://ipt.acm.org/ipt-2016/">event</a> at the Computer Science Faculty of the Polytechnic University of Valencia. As it was the very beginning of a hopefully long-lasting journey, the hole design started from scratch. The logo contains both female and male symbols joined in the same shape, combined with the circular-shaped ending, common in electronic chips representation. </p>
+<p></p>
+
 <p><img src="assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
-<p>which is styled with...</p>
-<pre><code>img[src$=&quot;#full&quot;] {
-    max-width: 100vw;
-}
-</code></pre>
-<p>This creates full-bleed images in the Casper theme, which stretch beyond their usual boundaries right up to the edge of the window. Every theme handles these types of things slightly differently, but it's a great trick to play with if you want to have a variety of image sizes and styles.</p>
-<h2 id="referencelists">Reference lists</h2>
-<p><strong>The quick brown <a href="https://en.wikipedia.org/wiki/Fox" title="Wikipedia: Fox">fox</a>, jumped over the lazy <a href="https://en.wikipedia.org/wiki/Dog" title="Wikipedia: Dog">dog</a>.</strong></p>
-<p>Another way to insert links in markdown is using reference lists. You might want to use this style of linking to cite reference material in a Wikipedia-style. All of the links are listed at the end of the document, so you can maintain full separation between content and its source or reference.</p>
-<h2 id="creatingfootnotes">Creating footnotes</h2>
-<p>The quick brown fox<sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup> jumped over the lazy dog<sup class="footnote-ref"><a href="#fn2" id="fnref2">[2]</a></sup>.</p>
-<p>Footnotes are a great way to add additional contextual details when appropriate. Ghost will automatically add footnote content to the very end of your post.</p>
-<h2 id="fullhtml">Full HTML</h2>
-<p>Perhaps the best part of Markdown is that you're never limited to just Markdown. You can write HTML directly in the Ghost editor and it will just work as HTML usually does. No limits! Here's a standard YouTube embed code as an example:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Cniqsc9QfDo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-<hr class="footnotes-sep">
-<section class="footnotes">
-<ol class="footnotes-list">
-<li id="fn1" class="footnote-item"><p>Foxes are red <a href="#fnref1" class="footnote-backref">↩︎</a></p>
-</li>
-<li id="fn2" class="footnote-item"><p>Dogs are usually not red <a href="#fnref2" class="footnote-backref">↩︎</a></p>
-</li>
-</ol>
