--- a/_posts/2017-07-27-advanced-markdown 00.04.32.html
+++ b/_posts/2017-07-27-advanced-markdown 00.04.32.html
@@ -3,7 +3,7 @@ layout: post
 current: post
 cover: assets/images/iptcover.jpg
 navigation: True
-title: Informática Para Tod@s - An ACM-W Event
+title: Informática Para Tod@s: ACM-W Celebrations
 date: 2018-08-23 10:18:00
 tags:
 class: post-template
