--- a/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
@@ -3,7 +3,7 @@ layout: post
 current: post
 cover: assets/images/iptcover.jpg
 navigation: True
-title: Informática Para Tod@s, ACM-W Celebrations
+title: Informática Para Tod@s: ACM-W Celebrations
 date: 2017-07-27 10:18:00
 class: post-template
 subclass: 'post'
