--- a/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
@@ -15,3 +15,11 @@ subclass: 'post'
 <p>&quot;ACM-W: Informática para tod@s&quot; joined a family of thriving events aimed to make visible women figures in Computer Science in a cozy environment where sharing ideas and showing values are the special guests. As its name denotes, this is a local spanish event derived from the <a href="https://womencourage.acm.org/2018/">WomEncourage</a> ACM-W event, and starting out it journey on 2016's summer.</p>
 
 <p>As part of the local ACM UPV Student Chapter of Valencia, and assuming the role of designer and starting from the first edition, I created all the graphics of the event, from posters and brochures to custom slides, establishing the brand of the celebration from the beginning. </p>
+
+
+<h2 id="valenciaipt">Valencia 2016</h2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3047.5955260119217!2d-0.34672558298980566!3d39.48181235038851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xded925519ef13eaf!2sUPV+-+Escuela+T%C3%A9cnica+Superior+de+Ingenier%C3%ADa+Inform%C3%A1tica+ETSINF!5e0!3m2!1sen!2ses!4v1535044887070" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<p>The valencian city was the first one to hold this kind of <a href="https://ipt.acm.org/ipt-2016/">event</a> at the Computer Science Faculty of the Polytechnic University of Valencia. As it was the very beginning of a hopefully long-lasting journey, the hole design started from scratch. The logo contains both female and male symbols joined in the same shape, combined with the circular-shaped ending, common in electronic chips representation. </p>
+<p></p>
+
+<p><img src="assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
