--- a/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
@@ -12,13 +12,21 @@ subclass: 'post'
 
 <p><a href="https://women.acm.org">ACM-W</a> is an international comitee part of the <a href="http://acm.org/">ACM (Association for Computer Machinery)</a> whose main mission is to promote women participation in all the fields related to Computer Science.</p>
 
-<p>&quot;ACM-W: Informática para tod@s&quot; joined a family of thriving events aimed to make visible women figures in Computer Science in a cozy environment where sharing ideas and showing values are the special guests. As its name denotes, this is a local spanish event derived from the <a href="https://womencourage.acm.org/2018/">WomEncourage</a> ACM-W event, and starting out it journey on 2016's summer.</p>
+<p>&quot;ACM-W: Informática Para Tod@s&quot; (IPT) joined a family of thriving events aimed to make visible women figures in Computer Science in a cozy environment where sharing ideas and showing values are the special guests. As its name denotes, this is a local spanish event derived from the <a href="https://womencourage.acm.org/2018/">WomEncourage</a> ACM-W event, and starting out it journey on 2016's summer.</p>
 
 <p>As part of the local ACM UPV Student Chapter of Valencia, and assuming the role of designer and starting from the first edition, I created all the graphics of the event, from posters and brochures to custom slides, establishing the brand of the celebration from the beginning. </p>
 
 
-<h2 id="valenciaipt">Valencia 2016</h2>
-<p>The valencian city was the first one to hold this kind of <a href="https://ipt.acm.org/ipt-2016/">event</a> at the <a href="https://goo.gl/maps/Ck4bU7zPXdv">Computer Science Faculty of the Polytechnic University of Valencia</a>. As it was the very beginning of a hopefully long-lasting journey, the hole design started from scratch. The logo contains both female and male symbols joined in the same shape, combined with the circular-shaped ending, common in electronic chips representation. </p>
+<h2 id="valenciaipt">Valencia 2016 &#x1F958</h2>
+<p>The valencian city was the first one to hold this kind of <a href="https://ipt.acm.org/ipt-2016/">event</a> at the <a href="https://goo.gl/maps/Ck4bU7zPXdv">Computer Science Faculty of the Polytechnic University of Valencia</a>. As it was the very beginning of a hopefully long-lasting journey, the hole design started from scratch.</p>
 <p></p>
 
 <p><img src="assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
+
+<p>The logo contains both female and male symbols joined in the same shape, combined with the circular-shaped ending, common in electronic chips representation. The idea behind the IPT is to raise awareness among both genders about problems and challanges that women face nowadays. Is thus a great way to say "We join strenghts, we do it together!" </p>
+
+<h2 id="mallorcaipt">Mallorca 2017 &#x1F3DD</h2>
+<p>After a small start, Universitad de les Illes Balears was chosen to host the <a href="https://ipt.acm.org/ipt-2017/">second edition</a> of this celebration. This time the style of the promotional material becomes more colorful, merging the hues present in the previous edition to form fresh gradients.</p>
+<p></p>
+
+<p><img src="assets/images/project-ipt-mallorca.jpg#full" alt="walking"></p>
