--- a/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2017-07-27-informática-para tod@s-ACM-W-elebrations.html
@@ -32,9 +32,10 @@ subclass: 'post'
 <p><img src="assets/images/project-ipt-mallorca.jpg#full" alt="walking"></p>
 
 <h2 id="madridipt">Madrid 2018 &#x1F3D9</h2>
-<p>All good things come in threes, so why not choosing Spain's capital city? The <a href="https://ipt.acm.org/">third edition</a> of the IPT gains national relevance and deserve a strong look. Same gradients, but brighter contrasted on a dark background, more cohesion between promo items, but same info structure.</p>
+<p>All good things come in threes, so why not choosing Spain's capital city? The <a href="https://ipt.acm.org/ipt-2018/">third edition</a> of the IPT gains national relevance and deserve a strong look. Same gradients, but brighter contrasted on a dark background, more cohesion between promo items, but same info structure.</p>
 <p></p>
 
 <p><img src="assets/images/project-ipt-madrid.jpg#full" alt="walking"></p>
 
 <h2 id="acorunaipt">A Coruña 2019 &#x1F419</h2>
+<p>Coming soon...</p>
