--- a/_posts/2017-07-27-acm.html
+++ b/_posts/2017-07-27-acm.html
@@ -10,32 +10,39 @@ subclass: 'post'
 ---
 
 
-<p><a href="https://acmupv.webs.upv.es">ACM UPV Chapter</a> and ACM-W UPV Chapter are nonprofit associations born in the Computer Science Faculty at the Polytechnic Universiy of Valencia. As an active member of the board of both, my tasks were related to managing our relationship with the Faculty and other associations, making decisions about events and also taking good care of the branding and promotion of all the activities we are envolved into.</p>
+<p><a href="https://acmupv.webs.upv.es">ACM UPV Chapter</a> and ACM-W UPV Chapter are nonprofit associations born in the Computer Science Faculty at the Polytechnic Universiy of Valencia. As an active member of the board of both, my tasks were related to managing our relationship with the Faculty and other associations, making decisions about events and also taking good care of the branding and promotion of all the activities we are involved into.</p>
 
 <h1>Purpose</h1>
-<p>When I landed to University, the ACM UPV Student Chapter had already been running for 2 years. Its aim? Offer students extra activities to develop their skills in the Computer Science field or just mess up with a new technology which has been driving crazy youngsters. After all, the best way to learn is by sorting something out by yourself. Besides, as the members are (volunteer) students too, the workshops management could not only endow them with organizational expertise, but also plead for a higher purpose.</p>
+<p>When I landed at University, the ACM UPV Student Chapter had already been running for 2 years. Its aim? Offer students extra activities to develop their skills in the Computer Science field or just mess up with a new technology which has been driving crazy youngsters. After all, the best way to learn is by sorting something out by yourself. Besides, as the members are (volunteer) students too, the workshops management could not only endow them with organizational expertise but also plead for a higher purpose. </p>
 
-<p></p>
+<p>Together with the ACM-W association, </p>
 
 <h1>Design</h1>>
 <h2 id="acmlogo">The Logo</h2>
-<p>First thing first! A good looking logo to become known among students. Each of the many Student Chapters in Europe has its own unique brand, so we decided to customize ours too.</p>
+<p>First thing first! A good looking logo to become known among students. Each of the many Student Chapters in Europe has its own unique brand, so why not having a custom one too?.</p>
 
-<p>In order to relate the Chapter to the main association, colours and shapes were taken into account. Blue hues are distinctive of the International ACM Chapter, and the same thing happens with purple at ACM Women Chapter. Compared to the <a href="https://goo.gl/images/GdJatv">official logo</a>, the ones designed for the Student Chapter revert the shapes (circle contained in a diamond): Circles become the most attractive feature while forming an inner diamond.</p>
+<p>In order to relate the Chapter to the main association, colors and shapes were taken into account. Blue hues are distinctive of the International ACM Chapter, and the same thing happens with purple at ACM Women Chapter. Compared to the <a href="https://goo.gl/images/GdJatv">official logo</a>, the ones designed for the Student Chapter revert the shapes (circle contained in a diamond): Circles become the most attractive feature while forming an inner diamond.</p>
 
 <p><img src="assets/images/project-acm-logos.jpg#full" alt="walking"></p>
 
 
 <h2 id="acm">The Visual</h2>
-<p>Each of the logos have been used for their seldom associations as part of the visual materials, mostly for posters.
+<p>Each of the logos have been used for as part of the visual materials, mostly posters. Published online and/or hanged on the Faculty's wall, they did their job!</p>
 
-
-Starting from posters to promote activities, which were required to adapt to a variety of sizes (A3 paper, electronic devices with HD resolution, Facebook posts...), to giveaways like the bookmarks below </p>
+<p>Aside of activity promotion, we also had personal bookmarks featuring famous characters that contributed to Computer Science, which were included in all the welcome packs (notebook + pen + backpack, all ACM-branded!) given at the time you suscribe to an event.</p>
 
 <p><img src="assets/images/project-acm-events.jpg#full" alt="walking"></p>
 
-<h2 id="acm3.0">Refresh</h2>
+<h2 id="acm3.0">The Refresh. ACM 2.0</h2>
+<p>Women and men have evolved at the same rate. So did ACM and ACM-W. But why two different associations? We collaborate, we co-organize, we work together, we commit to the same causes. Let's merge and do everything together.</p>
+
+<p>Time for a new logo! (And also a small sibling)</p>
 <p><img src="assets/images/project-acm-both.jpg#full" alt="walking"></p>
+
+<p>Freshened up and ready to go we continue together towards our objectives with more and more activities...</p>
+
 <p><img src="assets/images/project-acm-last.jpg#full" alt="walking"></p>
+
+<h1 id="acm3.0">Collaboration</h1>
 
 <p></p>
