--- a/_posts/2017-07-27-acm.html
+++ b/_posts/2017-07-27-acm.html
@@ -17,7 +17,7 @@ subclass: 'post'
 
 <p>Together with the ACM-W association, </p>
 
-<h1>Design</h1>>
+<h1>Design</h1>
 <h2 id="acmlogo">The Logo</h2>
 <p>First thing first! A good looking logo to become known among students. Each of the many Student Chapters in Europe has its own unique brand, so why not having a custom one too?.</p>
 
@@ -44,5 +44,7 @@ subclass: 'post'
 <p><img src="assets/images/project-acm-last.jpg#full" alt="walking"></p>
 
 <h1 id="acm3.0">Collaboration</h1>
+
+<p><img src="assets/images/project-acm-collaboration.jpg#full" alt="walking"></p>
 
 <p></p>
