Second post complete

--- a/_posts/2017-07-27-acm.html
+++ b/_posts/2017-07-27-acm.html
@@ -44,7 +44,14 @@ subclass: 'post'
 <p><img src="assets/images/project-acm-last.jpg#full" alt="walking"></p>
 
 <h1 id="acm3.0">Collaboration</h1>
+<p>Computer Science Faculty has long started to promote women in tech by carrying out activities  each year whose aim is to think over why there are so few female audience and encourage young ladies to join the tech field. <a href="http://museo.inf.upv.es/en/jornadas-bits-en-femenino/">"Bits en Femenino"</a> ("Feminine bits" in English) is the event that embraces this purpose each 8<sup>th</sup> of March. </p>
 
-<p><img src="assets/images/project-acm-collaboration.jpg#full" alt="walking"></p>
+<p>By being a Faculty's event, it has been gaining more and more weight each year, so they decided to team up with the ACM UPV Student Chapter as we commit to the same cause.</p>
+
+<p>They needed a logo to represent the yearly event. One to express the whole meaning contained in the event title. One to concentrate all the intention.</p>
+
+<p>After a few tries, the decision converged to a complex logo containing the "B" and "F" initials plus a 5 element diamond which represents a flower built by bits.</p>
+
+<p><img src="assets/images/project-acm-collaboration.jpg" alt="walking"></p>
 
 <p></p>
