Second post update

--- a/_posts/2017-07-27-acm.html
+++ b/_posts/2017-07-27-acm.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/iptcover.jpg
+cover: assets/images/acmcover.jpg
 navigation: True
 title: Association for Computer Machinery UPV Student Chapter
 date: 2017-07-27 10:18:00
