--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -3,55 +3,25 @@ layout: post
 current: post
 cover: assets/images/acmcover.jpg
 navigation: True
-title: Association for Computer Machinery UPV Student Chapter
+title: Art Director Solei
 date: 2017-07-27 10:18:00
 class: post-template
 subclass: 'post'
 ---
 
 
-<p><a href="https://acmupv.webs.upv.es">ACM UPV Chapter</a> and ACM-W UPV Chapter are nonprofit associations born in the Computer Science Faculty at the Polytechnic Universiy of Valencia. As an active member of the board of both, my tasks were related to managing our relationship with the Faculty and other associations, making decisions about events and also taking good care of the branding and promotion of all the activities we are involved into.</p>
+<p>Svitlana's work and trajectory are displayed on <a href="http://adsolei.com">website</a> for the public to admire her talent. Recently, she has refreshed her site's look with a new landing page. </p>
 
-<h1>Purpose</h1>
-<p>When I landed at University, the ACM UPV Student Chapter had already been running for 2 years. Its aim? Offer students extra activities to develop their skills in the Computer Science field or just mess up with a new technology which has been driving crazy youngsters. After all, the best way to learn is by sorting something out by yourself. Besides, as the members are (volunteer) students too, the workshops management could not only endow them with organizational expertise but also plead for a higher purpose. </p>
+<h2>The icons</h2>
+<p>Each of the icons is responsible for representing the meaning of the section. 4 divisions? 4 matching icons flavoured with a glowing yellow:</p>
 
-<p>Together with the ACM-W association, </p>
+<p><img src="assets/images/artdirectorsoleiicons.jpg" alt="walking"></p>
 
-<h1>Design</h1>
-<h2 id="acmlogo">The Logo</h2>
-<p>First thing first! A good looking logo to become known among students. Each of the many Student Chapters in Europe has its own unique brand, so why not having a custom one too?.</p>
+<h2>The colors</h2>
+<p><a href="http://html-color.org/EDE14A">Yellow</a> is the color of the sun. Of freshness. Of positivity. Of energy. And it contrasts perfectly alongside with a dark <a href="http://html-color.org/363636">deep grey</a> over a immaculate white.</p>
 
-<p>In order to relate the Chapter to the main association, colors and shapes were taken into account. Blue hues are distinctive of the International ACM Chapter, and the same thing happens with purple at ACM Women Chapter. Compared to the <a href="https://goo.gl/images/GdJatv">official logo</a>, the ones designed for the Student Chapter revert the shapes (circle contained in a diamond): Circles become the most attractive feature while forming an inner diamond.</p>
+<p><img src="assets/images/artdirectorsoleicolors.jpg" alt="walking"></p>
 
-<p><img src="assets/images/project-acm-logos.jpg#full" alt="walking"></p>
-
-
-<h2 id="acm">The Visual</h2>
-<p>Each of the logos have been used for as part of the visual materials, mostly posters. Published online and/or hanged on the Faculty's wall, they did their job!</p>
-
-<p>Aside of activity promotion, we also had personal bookmarks featuring famous characters that contributed to Computer Science, which were included in all the welcome packs (notebook + pen + backpack, all ACM-branded!) given at the time you suscribe to an event.</p>
-
-<p><img src="assets/images/project-acm-events.jpg#full" alt="walking"></p>
-
-<h2 id="acm3.0">The Refresh. ACM 2.0</h2>
-<p>Women and men have evolved at the same rate. So did ACM and ACM-W. But why two different associations? We collaborate, we co-organize, we work together, we commit to the same causes. Let's merge and do everything together.</p>
-
-<p>Time for a new logo! (And also a small sibling)</p>
-<p><img src="assets/images/project-acm-both.jpg#full" alt="walking"></p>
-
-<p>Freshened up and ready to go we continue together towards our objectives with more and more activities...</p>
-
-<p><img src="assets/images/project-acm-last.jpg#full" alt="walking"></p>
-
-<h1 id="acm3.0">Collaboration</h1>
-<p>Computer Science Faculty has long started to promote women in tech by carrying out activities  each year whose aim is to think over why there are so few female audience and encourage young ladies to join the tech field. <a href="http://museo.inf.upv.es/en/jornadas-bits-en-femenino/">"Bits en Femenino"</a> ("Feminine bits" in English) is the event that embraces this purpose each 8<sup>th</sup> of March. </p>
-
-<p>By being a Faculty's event, it has been gaining more and more weight each year, so they decided to team up with the ACM UPV Student Chapter as we commit to the same cause.</p>
-
-<p>They needed a logo to represent the yearly event. One to express the whole meaning contained in the event title. One to concentrate all the intention.</p>
-
-<p>After a few tries, the decision converged to a complex logo containing the "B" and "F" initials plus a 5 element diamond which represents a flower built by bits.</p>
-
-<p><img src="assets/images/project-acm-collaboration.jpg" alt="walking"></p>
-
+<h2>The final design</h2>
+<p><img src="assets/images/artdirectorsolei.jpg" alt="walking"></p>
 <p></p>
