--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/acmcover.jpg
+cover: assets/images/artdirect.jpg
 navigation: True
 title: Art Director Solei
 date: 2017-07-27 10:18:00
@@ -15,7 +15,7 @@ subclass: 'post'
 <h2>The icons</h2>
 <p>Each of the icons is responsible for representing the meaning of the section. 4 divisions? 4 matching icons flavoured with a glowing yellow:</p>
 
-<p><img src="assets/images/artdirectorsoleiicons.jpg" alt="walking"></p>
+<p><img src="assets/images/artdirectorsoleiicons.jpg#full" alt="walking"></p>
 
 <h2>The colors</h2>
 <p><a href="http://html-color.org/EDE14A">Yellow</a> is the color of the sun. Of freshness. Of positivity. Of energy. And it contrasts perfectly alongside with a dark <a href="http://html-color.org/363636">deep grey</a> over a immaculate white.</p>
@@ -23,5 +23,5 @@ subclass: 'post'
 <p><img src="assets/images/artdirectorsoleicolors.jpg" alt="walking"></p>
 
 <h2>The final design</h2>
-<p><img src="assets/images/artdirectorsolei.jpg" alt="walking"></p>
+<p><img src="assets/images/artdirectorsolei.jpg#full" alt="walking"></p>
 <p></p>
