--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/artdirect.jpg
+cover: assets/images/artdirectcover.jpg
 navigation: True
 title: Art Director Solei
 date: 2017-07-27 10:18:00
