--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -2,7 +2,7 @@
 layout: post
 current: post
 cover: assets/images/artdirectcover.jpg
-navigation: True
+navigation: False
 title: Art Director Solei
 date: 2017-07-27 10:18:00
 class: post-template
@@ -23,5 +23,5 @@ subclass: 'post'
 <p><img src="assets/images/artdirectorsoleicolors.jpg" alt="walking"></p>
 
 <h2>The final design</h2>
-<p><img src="assets/images/artdirectorsolei.jpg#full" alt="walking"></p>
+<p><img src="assets/images/artdirectorsoleifull.jpg#full" alt="walking"></p>
 <p></p>
