--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -2,7 +2,7 @@
 layout: post
 current: post
 cover: assets/images/artdirectcover.jpg
-navigation: False
+navigation: True
 title: Art Director Solei
 date: 2017-07-27 10:18:00
 class: post-template
