Third Post Update

--- a/_posts/2017-07-27-web-art-director-solei.html
+++ b/_posts/2017-07-27-web-art-director-solei.html
@@ -1,6 +1,6 @@
 ---
-layout: post
-current: post
+layout: post-update
+current: post-update
 cover: assets/images/artdirectcover.jpg
 navigation: True
 title: Art Director Solei
