Fourth post update

--- a/_posts/2018-04-12-flagup.html
+++ b/_posts/2018-04-12-flagup.html
@@ -10,19 +10,27 @@ subclass: 'post'
 ---
 
 
-<p><a href="https://acmupv.webs.upv.es">ACM UPV Chapter</a> and ACM-W UPV Chapter are nonprofit associations born in the Computer Science Faculty at the Polytechnic Universiy of Valencia. As an active member of the board of both, my tasks were related to managing our relationship with the Faculty and other associations, making decisions about events and also taking good care of the branding and promotion of all the activities we are involved into.</p>
+<p>Need a break or oil change? Or maybe a in-depth inspection? Tell <a href="http://setflagup.com">FlagUp</a> what you need and it will solve it for you!</p>
 
-<h1>Purpose</h1>
-<p>When I landed at University, the ACM UPV Student Chapter had already been running for 2 years. Its aim? Offer students extra activities to develop their skills in the Computer Science field or just mess up with a new technology which has been driving crazy youngsters. After all, the best way to learn is by sorting something out by yourself. Besides, as the members are (volunteer) students too, the workshops management could not only endow them with organizational expertise but also plead for a higher purpose. </p>
+<p>By posting a request on the website with a few details about your vehicle, FlagUp is able to find you the best choice, either filtered by price or by distance. Ok, but how can I do this?</p>
 
-<p>Together with the ACM-W association, </p>
-
-<h1>Design</h1>
-<h2 id="acmlogo">The Logo</h2>
-<p>First thing first! A good looking logo to become known among students. Each of the many Student Chapters in Europe has its own unique brand, so why not having a custom one too?.</p>
-
-<p>In order to relate the Chapter to the main association, colors and shapes were taken into account. Blue hues are distinctive of the International ACM Chapter, and the same thing happens with purple at ACM Women Chapter. Compared to the <a href="https://goo.gl/images/GdJatv">official logo</a>, the ones designed for the Student Chapter revert the shapes (circle contained in a diamond): Circles become the most attractive feature while forming an inner diamond.</p>
-
+<h1>The Web &#x1F310</h1>
+<p> A universal web platform to access the tool. First, one must enter <a href="http://setflagup.com">the website</a> and fill in the form, which consists of 6-8 steps. A simple interface is provided for each so it only asks for a specific field.</p>
 <p><img src="assets/images/project-flagup-intro.jpg#full" alt="walking"></p>
+
+<p>On the Repair Shop side, requests are received so they can offer an accurate quote to the client while watching what competitors have to say about the same job.</p>
+
 <p><img src="assets/images/project-flagup-carshop.jpg#full" alt="walking"></p>
-<p><img src="assets/images/project-flagup-clients.jpg#full" alt="walking"></p>
+
+
+<h1>The App &#x1F4F1</h1>
+Also, FlagUp can be accessed from an iOS platform. The interface offers again uncluttered information, keeping it all simple.
+<p><img src="assets/images/project-flagup-mobile.jpg#full" alt="walking"></p>
+
+<h1>The Promo &#x1F6A9</h1>
+<p>As this is a brave entrepreneur project, some promotion is needed in order to attract investors attention. This is why we have a promo material for pitches (right) with full information about the benefits of joining the tool, and also collaboration flyers (left).</p>
+
+<p>And if the team has convinced you, we have to make sure you can contact us. Classic tactic. Business cards (magnifying glass).</p>
+
+<p><img src="assets/images/project-flagup-promo.jpg#full" alt="walking"></p>
+
