Fourth post update

--- a/_posts/2018-04-12-flagup.html
+++ b/_posts/2018-04-12-flagup.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/acmcover.jpg
+cover: assets/images/flagupcover.jpg
 navigation: True
 title: FlagUp - Online Car Repair Dealer
 date: 2018-04-12 10:00:00
