--- a/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
@@ -6,6 +6,7 @@ navigation: True
 title: Informática Para Tod@s - ACM Women Celebrations
 date: 2018-04-28 12:00:00
 class: post-template
+tags: ACM
 subclass: 'post'
 ---
 
