--- a/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/iptcover.jpg
+cover: assets/images/covers/iptcover.jpg
 navigation: True
 title: Informática Para Tod@s - ACM Women Celebrations
 date: 2018-04-28 12:00:00
@@ -22,7 +22,7 @@ subclass: 'post'
 <p>The valencian city was the first one to hold this kind of <a href="https://ipt.acm.org/ipt-2016/">event</a> at the <a href="https://goo.gl/maps/Ck4bU7zPXdv">Computer Science Faculty of the Polytechnic University of Valencia</a>. As it was the very beginning of a hopefully long-lasting journey, the hole design started from scratch.</p>
 <p></p>
 
-<p><img src="assets/images/project-ipt-valencia.jpg#full" alt="walking"></p>
+<p><img src="assets/images/ipt/project-ipt-valencia.jpg#full" alt="walking"></p>
 
 <p>The logo contains both female and male symbols joined in the same shape, combined with the circular-shaped ending, common in electronic chips representation. The idea behind the IPT is to raise awareness among both genders about problems and challenges that women face nowadays. Is thus a great way to say "We join strengths, we do it together!" </p>
 
@@ -30,13 +30,13 @@ subclass: 'post'
 <p>After a small start, Universitad de les Illes Balears was chosen to host the <a href="https://ipt.acm.org/ipt-2017/">second edition</a> of this celebration. This time the style of the promotional material becomes more colorful, merging the hues present in the previous edition to form fresh gradients.</p>
 <p></p>
 
-<p><img src="assets/images/project-ipt-mallorca.jpg#full" alt="walking"></p>
+<p><img src="assets/images/ipt/project-ipt-mallorca.jpg#full" alt="walking"></p>
 
 <h2 id="madridipt">Madrid 2018 &#x1F3D9</h2>
 <p>All good things come in threes, so why not choosing Spain's capital city? The <a href="https://ipt.acm.org/ipt-2018/">third edition</a> of the IPT gains national relevance and deserve a strong look. Same gradients, but brighter contrasted on a dark background, more cohesion between promo items, but same info structure.</p>
 <p></p>
 
-<p><img src="assets/images/project-ipt-madrid.jpg#full" alt="walking"></p>
+<p><img src="assets/images/ipt/project-ipt-madrid.jpg#full" alt="walking"></p>
 
 <h2 id="acorunaipt">A Coruña 2019 &#x1F419</h2>
 <p>Coming soon...</p>
