--- a/_posts/2018-05-25-callxpro.html
+++ b/_posts/2018-05-25-callxpro.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/callxprocover.jpg
+cover: assets/images/covers/callxprocover.jpg
 navigation: True
 title: Call X PRO - The Professional Call Recorder
 date: 2018-04-12 10:00:00
@@ -9,7 +9,7 @@ class: post-template
 subclass: 'post'
 ---
 
-<p><img src="assets/images/callxpro.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/callrecorder/callxpro.jpg#full" alt="walking"></p>
 
 
 
