--- a/_posts/2018-05-25-forestcompany.html
+++ b/_posts/2018-05-25-forestcompany.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/smsbutlercover.jpg
+cover: assets/images/covers/bayacover.jpg
 navigation: True
 title: Forest Company - Real Estate Management
 date: 2018-04-12 10:00:00
@@ -9,7 +9,7 @@ class: post-template
 subclass: 'post'
 ---
 
-<p><img src="assets/images/baya.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/baya/baya.jpg#full" alt="walking"></p>
 
 
 
