--- a/_posts/2018-05-08-acm.html
+++ b/_posts/2018-05-08-acm.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: assets/images/acmcover.jpg
+cover: assets/images/covers/acmcover.jpg
 navigation: True
 title: Association for Computer Machinery UPV Student Chapter
 date: 2018-05-08 10:00:00
@@ -23,7 +23,7 @@ subclass: 'post'
 
 <p>In order to relate the Chapter to the main association, colors and shapes were taken into account. Blue hues are distinctive of the International ACM Chapter, and the same thing happens with purple at ACM Women Chapter. Compared to the <a href="https://goo.gl/images/GdJatv">official logo</a>, the ones designed for the Student Chapter revert the shapes (circle contained in a diamond): Circles become the most attractive feature while forming an inner diamond.</p>
 
-<p><img src="assets/images/project-acm-logos.jpg#full" alt="walking"></p>
+<p><img src="assets/images/acm/project-acm-logos.jpg#full" alt="walking"></p>
 
 
 <h2 id="acm">The Visual</h2>
@@ -31,17 +31,17 @@ subclass: 'post'
 
 <p>Aside of activity promotion, we also had personal bookmarks featuring famous characters that contributed to Computer Science, which were included in all the welcome packs (notebook + pen + backpack, all ACM-branded!) given at the time you suscribe to an event.</p>
 
-<p><img src="assets/images/project-acm-events.jpg#full" alt="walking"></p>
+<p><img src="assets/images/acm/project-acm-events.jpg#full" alt="walking"></p>
 
 <h2 id="acm3.0">The Refresh. ACM 2.0</h2>
 <p>Women and men have evolved at the same rate. So did ACM and ACM-W. But why two different associations? We collaborate, we co-organize, we work together, we commit to the same causes. Let's merge and do everything together.</p>
 
 <p>Time for a new logo! (And also a small sibling)</p>
-<p><img src="assets/images/project-acm-both.jpg#full" alt="walking"></p>
+<p><img src="assets/images/acm/project-acm-both.jpg#full" alt="walking"></p>
 
 <p>Freshened up and ready to go we continue together towards our objectives with more and more activities...</p>
 
-<p><img src="assets/images/project-acm-last.jpg#full" alt="walking"></p>
+<p><img src="assets/images/acm/project-acm-last.jpg#full" alt="walking"></p>
 
 <h1 id="acm3.0">Collaboration</h1>
 <p>Computer Science Faculty has long started to promote women in tech by carrying out activities  each year whose aim is to think over why there are so few female audience and encourage young ladies to join the tech field. <a href="http://museo.inf.upv.es/en/jornadas-bits-en-femenino/">"Bits en Femenino"</a> ("Feminine bits" in English) is the event that embraces this purpose each 8<sup>th</sup> of March. </p>
@@ -52,6 +52,6 @@ subclass: 'post'
 
 <p>After a few tries, the decision converged to a complex logo containing the "B" and "F" initials plus a 5 element diamond which represents a flower built by bits.</p>
 
-<p><img src="assets/images/project-acm-collaboration.jpg" alt="walking"></p>
+<p><img src="assets/images/acm/project-acm-collaboration.jpg" alt="walking"></p>
 
 <p></p>
