--- a/_posts/2018-05-25-numberlocator.html
+++ b/_posts/2018-05-25-numberlocator.html
@@ -3,7 +3,7 @@ layout: post
 current: post
 cover: assets/images/covers/numberlocatorcover.jpg
 navigation: True
-title: Period Tracker - Menstrual cycle app
+title: Number Locator - Phone Tracking Tool
 date: 2018-04-12 10:00:00
 class: post-template
 tags: [Mobile App]
