--- a/_posts/2018-05-08-acm.html
+++ b/_posts/2018-05-08-acm.html
@@ -6,6 +6,8 @@ navigation: True
 title: Association for Computer Machinery UPV Student Chapter
 date: 2018-05-08 10:00:00
 class: post-template
+author:raul
+tags: [ACM]
 subclass: 'post'
 ---
 
