--- a/_posts/2018-06-13-web-art-director-solei.html
+++ b/_posts/2018-06-13-web-art-director-solei.html
@@ -6,6 +6,8 @@ navigation: True
 title: Art Director Solei
 date: 2018-06-13 16:30:00
 class: post-template
+tags: [Web]
+author: raul
 subclass: 'post'
 ---
 
