--- a/_posts/2018-04-12-flagup.html
+++ b/_posts/2018-04-12-flagup.html
@@ -6,6 +6,8 @@ navigation: True
 title: FlagUp - Online Car Repair Dealer
 date: 2018-04-12 10:00:00
 class: post-template
+tags: [Mobile App, iOS, Web]
+author: raul
 subclass: 'post'
 ---
 
