--- a/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
+++ b/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
@@ -1,12 +1,13 @@
 ---
 layout: post
-current: post
+current: post-update
 cover: assets/images/covers/iptcover.jpg
 navigation: True
 title: Informática Para Tod@s - ACM Women Celebrations
 date: 2018-04-28 12:00:00
 class: post-template
-tags: ACM
+tags: [ACM]
+author: raul
 subclass: 'post'
 ---
 
