--- a/_posts/2018-05-25-callxpro.html
+++ b/_posts/2018-05-25-callxpro.html
@@ -1,15 +1,21 @@
 ---
 layout: post
-current: post
+current: post-update
 cover: assets/images/covers/callxprocover.jpg
 navigation: True
 title: Call X PRO - The Professional Call Recorder
 date: 2018-04-12 10:00:00
 class: post-template
+author: raul
+tags: [Mobile App, Android]
 subclass: 'post'
 ---
 
+<p>Need the best solution for phone call recording on your Android device? Take control of your phone calls and choose the best <a href="https://play.google.com/store/apps/details?id=com.smsrobot.callrecorder">Call Recorder</a> app in 2018.</p>
+
+<p>Refreshed dark design. Wide variety of tools and options. And the certainty of having a proof in a trial just in case you're caught in a nasty situation. What else?</p>
+
 <p><img src="assets/images/apps/callrecorder/callxpro.jpg#full" alt="walking"></p>
 
-
+All icons have been designed specifically for this app.
 
