--- a/_posts/2018-05-25-forestcompany.html
+++ b/_posts/2018-05-25-forestcompany.html
@@ -1,11 +1,13 @@
 ---
 layout: post
-current: post
+current: post-update
 cover: assets/images/covers/bayacover.jpg
 navigation: True
 title: Forest Company - Real Estate Management
 date: 2018-04-12 10:00:00
 class: post-template
+author: raul
+tags: [Mobile App, iOS]
 subclass: 'post'
 ---
 
