--- a/_posts/2018-05-25-forestcompany.html
+++ b/_posts/2018-05-25-forestcompany.html
@@ -10,6 +10,10 @@ author: raul
 tags: [Mobile App, iOS]
 subclass: 'post'
 ---
+<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+
+<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+
 
 <p><img src="assets/images/apps/baya/baya.jpg#full" alt="walking"></p>
 
