--- a/_posts/2018-05-25-movieticket.html
+++ b/_posts/2018-05-25-movieticket.html
@@ -3,7 +3,7 @@ layout: post
 current: post-update
 cover: assets/images/covers/ticketmoviecover.jpg
 navigation: True
-title: Coinseed - Spare change on cryptocurencies
+title: Movie Ticket Challenge
 date: 2018-04-12 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
