--- a/_posts/2017-12-03-movieticket.html
+++ b/_posts/2017-12-03-movieticket.html
@@ -1,21 +1,20 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/bayacover.jpg
+cover: assets/images/covers/ticketmoviecover.jpg
 navigation: True
-title: Forest Company - Real Estate Management
-date: 2018-04-12 10:00:00
+title: Movie Ticket Challenge
+date: 2017-12-03 10:00:00
 class: post-template
-author: raul
 tags: [Mobile App, iOS]
+author: raul
 subclass: 'post'
 ---
 <p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-
-<p><img src="assets/images/apps/baya/baya.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/ticketmovie/ticketmovie.jpg#full" alt="walking"></p>
 
 
 
