--- a/_posts/2018-05-31-numberlocator.html
+++ b/_posts/2018-05-31-numberlocator.html
@@ -1,12 +1,12 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/ticketmoviecover.jpg
+cover: assets/images/covers/numberlocatorcover.jpg
 navigation: True
-title: Movie Ticket Challenge
-date: 2018-04-12 10:00:00
+title: Number Locator - Phone Tracking Tool
+date: 2018-05-31 10:00:00
 class: post-template
-tags: [Mobile App, iOS]
+tags: [Mobile App, Android]
 author: raul
 subclass: 'post'
 ---
@@ -14,7 +14,7 @@ subclass: 'post'
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/ticketmovie/ticketmovie.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/tracker/numberlocator.jpg#full" alt="walking"></p>
 
 
 
