--- a/_posts/2018-03-12-james.html
+++ b/_posts/2018-03-12-james.html
@@ -1,10 +1,10 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/liveshopcover.jpg
+cover: assets/images/covers/jamescover.jpg
 navigation: True
-title: LiveShop - All the market in your hand
-date: 2018-04-12 10:00:00
+title: James - Paris's Local services
+date: 2018-03-12 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
 author: raul
@@ -14,7 +14,7 @@ subclass: 'post'
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/liveshop/liveshop.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/james/james.jpg#full" alt="walking"></p>
 
 
 
