--- a/_posts/2018-03-24-forestcompany.html
+++ b/_posts/2018-03-24-forestcompany.html
@@ -1,20 +1,21 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/aerocover.jpg
+cover: assets/images/covers/bayacover.jpg
 navigation: True
-title: Aero - Quick Money Transfer
-date: 2018-04-12 10:00:00
+title: Forest Company - Real Estate Management
+date: 2018-03-24 10:00:00
 class: post-template
-tags: [Mobile App, iOS]
 author: raul
+tags: [Mobile App, iOS]
 subclass: 'post'
 ---
 <p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/aero/aero.jpg#full" alt="walking"></p>
+
+<p><img src="assets/images/apps/baya/baya.jpg#full" alt="walking"></p>
 
 
 
