--- a/_posts/2018-05-07-liveshop.html
+++ b/_posts/2018-05-07-liveshop.html
@@ -1,12 +1,12 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/numberlocatorcover.jpg
+cover: assets/images/covers/liveshopcover.jpg
 navigation: True
-title: Number Locator - Phone Tracking Tool
-date: 2018-04-12 10:00:00
+title: LiveShop - All the market in your hand
+date: 2018-05-07 10:00:00
 class: post-template
-tags: [Mobile App, Android]
+tags: [Mobile App, iOS]
 author: raul
 subclass: 'post'
 ---
@@ -14,7 +14,7 @@ subclass: 'post'
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/tracker/numberlocator.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/liveshop/liveshop.jpg#full" alt="walking"></p>
 
 
 
