--- a/_posts/2018-05-10-coinseed.html
+++ b/_posts/2018-05-10-coinseed.html
@@ -1,10 +1,10 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/trainestcover.jpg
+cover: assets/images/covers/coinseedcover.jpg
 navigation: True
-title: Trainest - Workout & fitness manager
-date: 2018-04-12 10:00:00
+title: Coinseed - Spare change on cryptocurencies
+date: 2018-05-10 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
 author: raul
@@ -14,7 +14,7 @@ subclass: 'post'
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/trainest/trainest.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/coinseed/coinseed.jpg#full" alt="walking"></p>
 
 
 
