--- a/_posts/2018-05-15-aire.html
+++ b/_posts/2018-05-15-aire.html
@@ -1,10 +1,10 @@
 ---
 layout: post
 current: post-update
-cover: assets/images/covers/jamescover.jpg
+cover: assets/images/covers/aerocover.jpg
 navigation: True
-title: James - Paris's Local services
-date: 2018-04-12 10:00:00
+title: Aero - Quick Money Transfer
+date: 2018-05-15 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
 author: raul
@@ -14,7 +14,7 @@ subclass: 'post'
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="assets/images/apps/james/james.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/aero/aero.jpg#full" alt="walking"></p>
 
 
 
